bizinikiwi/pezframe/support/test/tests/pezpallet_ui/call_invalid_vis_2.stderr
error: Invalid pezpallet::call, dispatchable function must be public: `pub fn`
  --> tests/pezpallet_ui/call_invalid_vis_2.rs:37:3
   |
37 |         pub(crate) fn foo(origin: OriginFor<T>) -> DispatchResultWithPostInfo {
   |         ^^^
